<resources>
    <string name="app_name">RestaurantReports</string>
    <string name="SoldQtyReport">Sold Qty Report</string>
    <string name="GroupReport">Group Report</string>
    <string name="CashReport">Cash Report</string>
    <string name="MostRecentSalesReport">Most Recent Sales Report</string>
    <string name="item_Code">Item Code</string>
    <string name="item_Name_">Item Name</string>
    <string name="Gross">Gross</string>
    <string name="Grossperc">Gross Perc</string>

    <string name="QTY">QTY</string>
    <string name="MODEL">Model</string>
    <string name="Kind">Kind</string>
    <string name="Group">Group</string>
    <string name="Tax">Tax</string>
    <string name="NetTotal">NetTotal</string>
    <string name="NetPercent">Net Percent</string>
    <string name="Net">Net</string>
    <string name="UnitPrice">Unit Price</string>
    <string name="totalgross">Total Gross</string>
    <string name="totaldiscount">Total Discount</string>
    <string name="Totaltax">Total Tax</string>
    <string name="fromdate">From Date</string>
    <string name="TOdate">To Date</string>
    <string name="casher">Casheir</string>
    <string name="POSNO">Pos.NO</string>
    <string name="Hint">Hint</string>
    <string name="Service">Service</string>
    <string name="discount_">Discount</string>
    <string name="ServiceTax">Service Tax</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="userName">User Name</string>
    <string name="show">Show</string>
    <string name="takeAway">Take Away</string>
    <string name="dineIn">Dine In</string>
    <string name="delevery">Delevery</string>
    <string name="openCash">Open Cash</string>
    <string name="total">Total</string>
    <string name="service">Service</string>
    <string name="netCash">Net Cash</string>
    <string name="gross_sales">Gross Sales</string>
    <string name="netSales_notax">Net Sales (no tax)</string>
    <string name="tax">Tax</string>
    <string name="netSals">Net Sals</string>
    <string name="serviceDetail">Service Detail</string>
    <string name="total_notax">Total  No Tax</string>
    <string name="sales">Sales</string>
    <string name="returned">Returned</string>
    <string name="net">Net</string>
    <string name="cashDetail">Cash Detail</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
</resources>