<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="2dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/kind"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="start"
                android:lineHeight="19sp"
                android:text="@string/Kind"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView

                android:id="@+id/model"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="@string/MODEL"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/group"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="@string/Group"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/qty"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="@string/QTY"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/gross"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="@string/Gross"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/grossPer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="Gross Percent"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/discount"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="Discount"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/totAfterDisc"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="Total After Discount"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/tax"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="@string/Tax"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/net"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="center"
                android:lineHeight="19sp"
                android:text="Net"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:layout_marginHorizontal="4dp"/>

            <TextView
                android:id="@+id/netPercent"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:gravity="end"
                android:lineHeight="19sp"
                android:text="@string/NetPercent"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
</LinearLayout>