<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFCFD"
    android:orientation="vertical"
    tools:context=".GroupReport">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:layout_weight="6.77"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingVertical="2dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.3"
                android:gravity="start|center_vertical"
                android:text="@string/fromdate"
                android:textColor="@color/blue2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/fromDateTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_stroke"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:gravity="center"
                app:drawableEndCompat="@drawable/ic_date_range_black_24dp" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:layout_weight="1.3"
                android:gravity="start|center_vertical"
                android:text="@string/TOdate"
                android:textColor="@color/blue2"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/toDateTV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_stroke"
                android:clickable="true"
                android:focusable="true"
                android:padding="5dp"
                android:gravity="center"
                app:drawableEndCompat="@drawable/ic_date_range_black_24dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1.7"
                android:gravity="start|center_vertical"
                android:text="@string/Group"
                android:textColor="@color/blue2"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/groupTF"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:endIconMode="dropdown_menu"
                >

                <AutoCompleteTextView
                    android:id="@+id/groupTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            </com.google.android.material.textfield.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="3dp"
                android:layout_weight="1.3"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/showBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/btn_bg"
                    android:drawableEnd="?android:attr/textCheckMark"
                    android:drawableTint="@color/black"
                    android:text="Show"
                    android:textColor="@color/white"
                    android:textSize="13sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/listCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="2.6"
        app:cardCornerRadius="15dp"
        app:cardElevation="4dp"
        app:strokeColor="#31AFB445"
        app:strokeWidth="1dp">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbarThumbHorizontal="@drawable/scrollbar_vertical_thumb"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="23dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="start"
                        android:lineHeight="19sp"
                        android:text="@string/Kind"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/MODEL"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/Group"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/QTY"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/Gross"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="Gross Percent"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="Discount"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />


                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="Total After Discount"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="@string/Tax"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="center"
                        android:lineHeight="19sp"
                        android:text="Net"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/alegreya_sans"
                        android:gravity="end"
                        android:lineHeight="19sp"
                        android:text="@string/NetPercent"
                        android:textColor="@color/primarytextcolor"
                        android:textSize="18sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginVertical="5dp"
                    android:background="#31AFB445" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/groupSalesRV"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </LinearLayout>
        </HorizontalScrollView>


    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="horizontal"
        android:paddingHorizontal="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/totalgross"
                    android:textColor="@color/blue2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalGross"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.0"
                    android:textColor="@color/blue2"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/totaldiscount"
                    android:textColor="@color/blue2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalDisc"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.0"
                    android:textColor="@color/blue2"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="@string/Totaltax"
                    android:textColor="@color/blue2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalTax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.0"
                    android:textColor="@color/blue2"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="Service"
                    android:textColor="@color/blue2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totService"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="0.0"
                    android:textColor="@color/blue2"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="Service Tax"
                    android:textColor="@color/blue2"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totServiceTax"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="start|center_vertical"
                    android:text="0.0"
                    android:textColor="@color/blue2"
                    android:textSize="14sp" />


            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>